--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,14 @@
             <version>1.7.30</version>
 <!--            <scope>compile</scope>-->
         </dependency>
-<!--        <dependency>-->
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.23</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>ch.qos.logback</groupId>-->
 <!--            <artifactId>logback-classic</artifactId>-->
 <!--            <version>1.2.3</version>-->
